fix: rm __wrap

--- a/app/assets/stylesheets/components/_space_table.scss
+++ b/app/assets/stylesheets/components/_space_table.scss
@@ -1,10 +1,4 @@
 .space-table {
-  &__wrap {
-    width: 100%;
-    border-radius: 8px;
-    border: 2px solid var(--color-set-3-bg);
-    overflow-x: auto;
-  }
 
   width: 100%;
   border-collapse: collapse;
